fix(results): overflow added

--- a/asset/css/desktop/results.css
+++ b/asset/css/desktop/results.css
@@ -7,6 +7,7 @@
     max-height: 630px;
     /* padding: 0 16px; */
     width: 100%;
+    overflow: scroll;
   }
 
   .results > * {
